@@ -117,4 +117,4 @@ table.sources td a:hover{color:#A5CDFF; text-decoration:underline;}
 .octocat	{display:inline-block; vertical-align:top; width:200px; max-width:200px;}
 a.git		{display:block; font-size:38px; color:#444;}
 a.git.small	{font-size:inherit; display:inline-block;}
-a.git:hover	{color:#1E90FF;}
+a.git:hover	{color:#1E90FF; text-decoration:underline;}
