@@ -17,7 +17,7 @@
 		<div id="background_image"></div>
 		<div class="overlay">
 			{beige}
-			<div class="default center">
+			<div class="default index">
 				<img src="{root}art/dp_logo.index.png" width="600" height="250" alt="D-Portal logo"/>
 				<div class="tongue_wrap">{tongue_select}</div>
 				<div class="tag">{tagline_text}</div>
@@ -39,7 +39,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="description_wrap a">
+				<div class="description_wrap">
 					<div class="description">
 						<span class="title">{index_title_text}</span>
 						<p><span class="bold">d-portal.org</span> {index_paragraph1_text}</p>
