@@ -1,3 +1,8 @@
+Static site (2015-03-04 shi)
+==============================
+Minor css changes to index
+
+
 Static site (2015-03-03 shi)
 ==============================
 Changed css styles for attribution section
