@@ -1,3 +1,8 @@
+Development Portal (2015-03-04 shi)
+==============================
+Minor css changes high / original
+
+
 Development Portal (2015-03-03 shi)
 ==============================
 Changed word wrap for donor names in money table
